--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "f67a5ba0",
    "metadata": {},
    "source": [
-    "# Déploiement d'un modèle dans le cloud"
+    "# CloudFruit360"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "da0e28fc",
    "metadata": {},
    "source": [
-    "Ce notebook est une première chaîne de traitement d'images qui comprend le preprocessing et une étape de réduction de dimension pour un outil de classification d'image"
+    "This notebook is a first image processing pipeline that includes preprocessing and a dimension reduction step for an image classification tool."
    ]
   },
   {
